DesignProject/tests/error/test01.src
// Error Test 1: Semantic error - undeclared variable
func add(a : integer, b : integer) -> integer {
    local result : integer;
    result := a + b + c;  // c is not declared
    return(result);
}

